updated apidoc
