# server/internal/openapi/go/model_confirm_operations_succeeded_response.go
@@ -1,0 +1,34 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Verni
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.1
+ */
+
+package openapi
+
+type ConfirmOperationsSucceededResponse struct {
+	Response map[string]interface{} `json:"response"`
+}
+
+// AssertConfirmOperationsSucceededResponseRequired checks if the required fields are not zero-ed
+func AssertConfirmOperationsSucceededResponseRequired(obj ConfirmOperationsSucceededResponse) error {
+	elements := map[string]interface{}{
+		"response": obj.Response,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertConfirmOperationsSucceededResponseConstraints checks if the values respects the defined constraints
+func AssertConfirmOperationsSucceededResponseConstraints(obj ConfirmOperationsSucceededResponse) error {
+	return nil
+}
