# server/internal/openapi/go/model_push_operations_request.go
@@ -11,11 +11,20 @@
 package openapi
 
 type PushOperationsRequest struct {
-	Operations []SomeOperation `json:"operations,omitempty"`
+	Operations []SomeOperation `json:"operations"`
 }
 
 // AssertPushOperationsRequestRequired checks if the required fields are not zero-ed
 func AssertPushOperationsRequestRequired(obj PushOperationsRequest) error {
+	elements := map[string]interface{}{
+		"operations": obj.Operations,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
 	for _, el := range obj.Operations {
 		if err := AssertSomeOperationRequired(el); err != nil {
 			return err
